wip: add actions system